Fix header z-index bug (#2030)
* fix header z-index bug

* one more z-index fix

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/elastic-lucene/_hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/elastic-lucene/_hero.scss
@@ -3,6 +3,7 @@
   padding: pxToRem(80) 0 pxToRem(440);
   position: relative;
   overflow: hidden;
+  z-index: 0;
 
   @include media-breakpoint-up(md) {
     padding-bottom: pxToRem(120);
